# LuckFox_Agent_v2

./: .gitignore  ARCHITECTURE_V2_LVGL.md  CLAUDE.md  DEPLOY_GUIDE.md  INMP441_MIC_INTEGRATION.md  OpenClaw_API_Reference.md  mockup.html  sync.sh  test_audio.aiff  wiring_map_clean.html
.claude/: settings.local.json
board/executables/: CMakeLists.txt  build_camera_daemon.sh  camera_daemon.c  get_frame.c
board/root/: enable_spi0_spidev.dtbo  enable_spi0_spidev.dts  enable_uart2.dts  main.py
board/sdcard/: audio_sender.py  frpc.toml  gui_client.py  http_api_server.py  http_api_server_v2.py  rtsp_capture.py
client/: convert_image.py  face_tracker_grid.py  luckfox_client.py  luckfox_remote.py  test_rtsp.py
luckfox_audio_fulldup/: luckfox_audio_fulldup.ino
luckfox_audio_fulldup/audio_hw_test/: audio_hw_test.ino
luckfox_audio_receiver/: luckfox_audio_receiver.ino
lvgl_gui/: CMakeLists.txt  README.md  lv_conf.h  toolchain-rv1106.cmake
lvgl_gui/src/: main.c
lvgl_gui/src/anim/: eyes_anim.c  eyes_anim.h
lvgl_gui/src/faces/: kawaii_face.c  kawaii_face.h
lvgl_gui/src/hal/: disp_driver.c  disp_driver.h  indev_buttons.c  indev_buttons.h
lvgl_gui/src/ipc/: cmd_parser.c  cmd_parser.h  ipc_server.c  ipc_server.h
lvgl_gui/src/screens/: scr_agent.c  scr_agent.h  scr_chat.c  scr_chat.h  scr_emoji.c  scr_emoji.h  scr_eyes.c  scr_eyes.h  scr_image.c  scr_image.h  scr_manager.c  scr_manager.h  scr_menu.c  scr_menu.h  scr_status.c  scr_status.h  scr_text.c  scr_text.h
lvgl_gui/src/theme/: lf_theme.c  lf_theme.h
